style.css
body {
    font-family: Roboto, Arial, sans-serif;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 0px;
    box-sizing: border-box;
}

.header {
    background-color: #1F2937;
    justify-content: space-between;
    display: flex;
    color: #F9FAF8;
    text-size: 24px;
    padding: 48px;
    font-weight: 700;
    flex: 1 1 auto;

}

.button {
    border-radius: 8px;
    background-color: #3882F6;
    width: fit-content;
    padding: 12px;
    display: block;
}

}
img {
    border-radius: 8px;
}

ul {
    display: flex;
    list-style: none;
    padding: 0px;
    margin: 0px;
    gap: 16px;
}


.hero-container {
    background-color: #1F2937;
    display: flex;
    gap: 48px;
    padding: 48px;
    justify-content: center;
    align-items: center;
}


.hero-picture {
    width: 300px;
    height: auto;
    flex: 0 0 auto;
}


.info-container {
    display: flex;
    align-items: flex-start;
    padding-left: 24px;
    padding-right: 24px;
    flex-wrap: wrap;
    margin-bottom: 48px;
    justify-content: center;
}

.info-box {
    justify-content: center;
    width: 240px;
    padding: 12px;
    flex: 0 0 auto;
    text-align: center;
    display: flex;
    flex-direction: column;
}

.info-box img {  
    padding: 16px;
    height: auto;
    border: #3882F6 solid 6px;
    flex: 0 0 auto;
}

.testimonial-container {
    background-color: #E5E7EB;
    font-size: 36px;
 
    color: #1F2937;
    font-style: italic;
    font-weight: lighter;
    padding: 64px 0px;
    display: flex;
    justify-content: center;
   
}

.testimonial-box {
    justify-content: center;
    width: 640px;
    padding: 48px;
    flex: 1 1 auto;
    max-width: 960px;
    display: flex;
    flex-direction: column;
}


.testimonial-container p {
    font-size: 18px;
    font-style: normal;
    color: #1F2937;
    font-weight: 900;
    text-align: right;
}

.call-to-action-container {
    display: flex;
    margin: 64px 0px;
    justify-content: center;
    padding: 0px 64px;
    
    
}

.call-to-action-box {
    background-color: #3282F6;
    border-radius: 8px;
    display: flex;
    width: 640px;
    gap: 48px;
    flex: 1 1 auto;
    padding: 0px 96px;
 
}

.call-to-action-box .button {
    border-radius: 8px;
    width: 128px;
    background-color: #3882F6;
    border: solid white 3px;
    padding: 8px;
    margin: auto;
    text-align: center;
    
}

.call-to-action-box h2 {
    color: #F9FAF8;
    text-align: left;
    margin-top: 16px;
    margin-bottom: 0px;

}

.call-to-action-box p {
    color: #F9FAF8;
    margin-top: 0px;
    
}


a:link, a:visited, a:hover, a:active {
    text-decoration: none;
    color: #F9FAF8;
}



h1 {
    font-size: 48px;
    font-weight: 900;
    color: #F9FAF8;
}

p {
    font-size: 18px;
    color: #F9FAF8;
}


h2 {
    font-size: 36px;
    font-weight: 900;
    color: #1F2937;
    text-align: center;
    margin-top: 48px;
}

.text {
    font-size: 18px;
    font-weight: 400;
}

